# email-automation-service

./: .env.example  .gitignore  README.md  Report.md  mail_index.sqlite  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
src/: ai_service.py  auth.py  config.py  deps.py  graph_client.py  indexer.py  prompts.py  retrieval.py  verifier.py  webhook_handler.py
src/models/: __init__.py  schemas.py
tests/: __init__.py  test_e2e.py  test_local.py  test_ngrok.py  test_retrieval.py
